<resources>
    <string name="app_name">DemoLT</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_category">Thông tin tài khoản</string>
    <string name="nav_history">Đăng xuất</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_login">Đăng nhập</string>
    <string name="nav_other">Xem thêm</string>

    <string name="amount_to_be_paid">Tổng số lượng tiền:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>