<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/baseline_home_24"/>
        <item android:id="@+id/nav_category"
            android:title="@string/nav_category"
            android:icon="@drawable/baseline_menu_24"/>
        <item android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/baseline_history_24"/>
        <item android:id="@+id/nav_other"
            android:title="@string/nav_other"
            android:icon="@drawable/baseline_category_24"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_login"
                android:title="@string/nav_login"
                android:icon="@drawable/baseline_login_24"/>
        </menu>
    </item>
</menu>